--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,106 @@ RewriteRule . index.php [L]
 # any potential route named admin
 # [F] sends a 403 Forbidden
 RewriteRule ^admin(/.*)?$ - [F,L] 
+
+# MOD_DEFLATE COMPRESSION (Commented Out)
+# <IfModule mod_deflate.c>
+#     AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript application/x-javascript application/json
+#     Header append Vary "Accept-Encoding"
+# </IfModule>
+
+# <IfModule mod_deflate.c>
+#     AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript application/x-javascript application/json
+#     <IfModule mod_headers.c>
+#         Header append Vary "Accept-Encoding"
+#     </IfModule>
+# </IfModule>
+
+#AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/javascript
+#Pour les navigateurs incompatibles
+
+BrowserMatch %5EMozilla/4\.0[678] no-gzip
+BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
+BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
+#ne pas mettre en cache si ces fichiers le sont déjà
+# SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png)$ no-gzip
+#les proxies doivent donner le bon contenu
+# Header append Vary User-Agent env=!dont-vary
+
+# BEGIN Expire headers
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresDefault "access plus 7200 seconds" # 2 hours
+
+    # Images
+    ExpiresByType image/jpg "access plus 1 month"
+    ExpiresByType image/jpeg "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/webp "access plus 1 month" # Add WEBP
+    
+    # Favicon
+    AddType image/x-icon .ico
+    ExpiresByType image/ico "access plus 1 month"
+    ExpiresByType image/icon "access plus 1 month"
+    ExpiresByType image/x-icon "access plus 1 month"
+
+    # CSS & JavaScript
+    ExpiresByType text/css "access plus 1 month"
+    ExpiresByType text/javascript "access plus 1 month"
+    ExpiresByType application/javascript "access plus 1 month" #Add this line
+    ExpiresByType application/x-javascript "access plus 1 month" #add this line
+
+    # Other content types
+    ExpiresByType text/html "access plus 2 hours"
+    ExpiresByType application/xhtml+xml "access plus 2 hours"
+    ExpiresByType application/json "access plus 2 hours" # Add json
+
+    # Fonts
+    ExpiresByType font/woff "access plus 1 month"
+    ExpiresByType font/woff2 "access plus 1 month"
+    ExpiresByType application/vnd.ms-fontobject "access plus 1 month"
+    ExpiresByType application/x-font-ttf "access plus 1 month"
+    ExpiresByType font/opentype "access plus 1 month"
+</IfModule>
+# END Expire headers
+
+# BEGIN Cache-Control Headers
+<IfModule mod_headers.c>
+    # 1 month
+    <FilesMatch "\.(ico|jpe?g|png|gif|webp|svg)$">
+        Header set Cache-Control "max-age=2592000, public" 
+    </FilesMatch>
+    
+    # 1 month
+    <FilesMatch "\.css$">
+        Header set Cache-Control "max-age=2592000, public" 
+    </FilesMatch>
+    
+    # 1 day (private)
+    <FilesMatch "\.js$">
+        Header set Cache-Control "max-age=86400, private" 
+    </FilesMatch>
+
+    # 2 hours
+    <FilesMatch "\.(html|htm)$">
+        Header set Cache-Control "max-age=7200, public"
+    </FilesMatch>
+    # 2 hours
+    <FilesMatch "\.(json)$">
+        Header set Cache-Control "max-age=7200, public"
+    </FilesMatch>
+
+    # Fonts
+    <FilesMatch "\.(ttf|otf|woff2?)$">
+        Header set Cache-Control "max-age=2592000, public"
+    </FilesMatch>
+    
+    # Disable caching for dynamic files (PHP, etc.)
+    <FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
+        Header set Cache-Control "no-store, no-cache, must-revalidate"
+    </FilesMatch>
+</IfModule>
+# END Cache-Control Headers
+
+# KILL THEM ETAGS
+FileETag none
